<resources>
    <string name="app_name">JidelnaSlavicin</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="accept">I accept the</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Incorrect password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="incorrect_credentials">Incorrect username or password</string>
    <string name="logout">Logout</string>
    <string name="request_error">"Unknown error occurred: "</string>
    <string name="network_error">Network error occurred:</string>
    <string name="incorrect_creds">Incorrect username/password</string>
    <string name="gateway_timeout">Jidelna server unreachable</string>
    <string name="refresh">Refresh</string>
    <string name="server_error">Error at our server\'s side</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="autoorder_header">Automatic ordering</string>
    <string name="profile_header">Your profile</string>
    <string name="notifications_header">Notifications</string>

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="autoorder_enable">Autoordering</string>
    <string name="settings">Settings</string>
    <string name="autoorder_enabled_description">Your lunch will be ordered automatically. Just don\'t forget to cancel it when you get sick!</string>
    <string name="autoorder_disabled_description">Disabled - you\'ll have to order your lunch by yourself.</string>
    <string name="autoorder_dinner_preferences">Help us choosing the menu you\'ll like</string>
    <string name="preffered_menu_number">Preferred menu number</string>
    <string name="allergens">Allergens</string>
    <string name="allergens_lovelist">Favourite allergens</string>
    <string name="allergens_blacklist">Allergen blacklist</string>
    <string name="order_uncomplying">Order uncomplying menu</string>
    <string name="allergens_lovelist_description">You like eggs? We will always order them!</string>
    <string name="allergens_blacklist_description">You hate fish? We won\'t order a lunch with fish!</string>
    <string name="order_uncomplying_off_description">If every lunch contains allergens you hate, we won\'t order anything.</string>
    <string name="order_uncomplying_on_description">We\'ll always order something, even if it contains hated allergens.</string>
    <string name="autoorder_basic_prefs">Basic preferences</string>
    <string name="change_url">Change API url</string>
    <string name="change_url_description">For advanced users. Changes the URL address of the jidelna application API.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="default_url">Default</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="autoorder_set_description">Do you want to have the dinner automatically ordered every day? Set it up.</string>
    <string name="notifications_set_description">"Do you want to get notifications about dinners? "</string>
    <string name="setup">Setup</string>
    <string name="theme">Theme</string>
    <string name="delete_account">Logout and delete account</string>
    <string name="delete_account_description">We\'ll delete records about you in the application server. Your autoorder preferences will be deleted.</string>
    <string name="delete_account_really">Do you really want to do this?</string>
    <string name="delete_account_really_description">Your autoorder settings will be lost. We\'ll stop autoordering. You will still be able to login to the official Jidelna web app.</string>
    <string name="logging_out">Logging out...</string>
    <string name="logout_description">We\'ll log you out and we\'ll keep your settings. We\'ll still autoorder your dinners.</string>
    <string name="logout_really">Do you really want to logout?</string>
    <string name="logout_really_description">We\'ll still order your dinners automatically.</string>

    <string name="notification_today_dinner_not_ordered">Today\'s dinner not ordered</string>
    <string name="notification_today_dinner_not_ordered_summary">Notifies you that you don\'t have a dinner ordered today.</string>
    <string name="notification_today_dinner_ordered">Today\'s dinner is ordered</string>
    <string name="notification_today_dinner_ordered_summary">Says what dinner you have ordered.</string>
    <string name="notification_today_dinner_autoordered">Today\'s dinner will be auto ordered</string>
    <string name="notification_today_dinner_autoordered_summary">Says what are we going to order for you.</string>
    <string name="notification_tomorrow_dinner_not_ordered">Tomorrow\'s dinner not ordered</string>
    <string name="notification_tomorrow_dinner_not_ordered_summary">It Notifies you that you don\'t have a dinner ordered tomorrow in the evening.</string>
    <string name="notification_tomorrow_dinner_ordered">Tomorrow\'s dinner is ordered</string>
    <string name="notification_tomorrow_dinner_ordered_summary">Says what dinner you have ordered tomorrow in the evening.</string>
    <string name="notification_tomorrow_dinner_autoordered">Tomorrow\'s dinner will be auto ordered</string>
    <string name="notification_tomorrow_dinner_autoordered_summary">Says what are we going to order for you in the evening.</string>
    <string name="you_have_ordered">You have ordered</string>
    <string name="we_will_order">We will order</string>
    <string name="still_available_dinners">These dinners are still available:</string>
    <string name="no_available_dinner">No dinner is available now.</string>
    <string name="notifications_channel_name">Dinners</string>
    <string name="notifications_channel_description">You can enable each notification in application settings.</string>
    <string name="autoorder_request_preferences">Request fulfilling options</string>
    <string name="autoorder_request_order_one_by_one">Fulfill request x days in advance</string>
    <string name="autoorder_request_order_one_by_one_enabled">We will always send the order request to the cantry x days before the day of the dinner.</string>
    <string name="autoorder_request_order_one_by_one_disabled">We\'ll order dinners for all days when the menu is available.</string>
    <string name="autoorder_request_days_in_advance">When to order</string>
    <string name="credit">"Credit: "</string>
    <string name="see_all">See all comments</string>
    <string name="title_activity_reviews">Reviews</string>
    <string name="write_review">Write review</string>
    <string name="seconds_ago">%1$d seconds ago</string>
    <string name="minutes_ago">%1$d minutes ago</string>
    <string name="hours_ago">%1$d hours ago</string>
    <string name="days_ago">%1$d days ago</string>
    <string name="message">Your review</string>
    <string name="title_activity_reviews_write">Write a review</string>
    <string name="no_reviews_yet">No reviews yet. Be the first to write one.</string>
    <string name="must_order_to_write_review">You must order a dinner to write a review</string>
    <string name="review_badwords">Review contains bad words.</string>
    <!-- Strings used for fragments for navigation -->

</resources>